CLI-15: Lots of debugging on swagger.yaml to get it work with swagger-express-mw mocking (-m) flag.
